[project]
name = "mrq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "highway-env>=1.10.1",
    "setuptools<81",
    "stable-baselines3[extra]>=2.6.0",
    "tyro>=0.9.24",
    "torch>=2.6.0",
    "gymnasium[mujoco,other]>=1.0.0",
    "ale-py>=0.10.1",
    "dm-control>=1.0.25",
    "imageio>=2.0.0",
    "numpy>=2.0.0",
    "opencv-python>=4.10.0.84",
]

[tool.uv.sources]
envs = { git = "https://gitee.com/jiadong-he/envs.git", rev = "19e6c053" }
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true


[tool.ruff.lint]
extend-select = ["I0"]
